# Physics-Simulator

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: glad.c  main.c
src/shaders/: fragment.glsl  vertex.glsl
